try to fix install issues

--- a/platform/node/package.json
+++ b/platform/node/package.json
@@ -17,7 +17,7 @@
   "types": "index.d.ts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/maplibre/maplibre-native.git"
+    "url": "git+https://github.com/WifiDB/maplibre-native.git"
   },
   "license": "BSD-2-Clause",
   "dependencies": {
@@ -58,7 +58,7 @@
     "node": ">=18"
   },
   "scripts": {
-    "install": "prebuild-install --force --tag-prefix 'node-v'|| echo 'pre-compiled binary not found, please build from source'",
+    "install": "prebuild-install --verbose --tag-prefix node-v|| echo 'pre-compiled binary not found, please build from source'",
     "package-binaries": "node package-binaries.js",
     "test": "tape test/js/**/*.test.js",
     "test-memory": "node --expose-gc test/memory.test.js",
