--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -32,46 +32,21 @@ jobs:
         run: |
           packageName="$( node -e "console.log(require('./package.json').name)" )"
           currentVersion="$( node -e "console.log(require('./package.json').version)" )"
-          abi="$(node -e "console.log(process.versions.modules)")"
           isPublished="$( npm view $packageName versions --json | jq -c --arg cv "$currentVersion" 'any(. == $cv)' )"
           isPrerelease="$( node -e "console.log(require('semver').prerelease('$currentVersion') ? 'true' : 'false')" )"
           echo "published=$isPublished" >> "$GITHUB_OUTPUT"
           echo "current-version=$currentVersion" >> "$GITHUB_OUTPUT"
-          echo "is-prerelease=$isPrerelease" >> "$GITHUB_OUTPUT"
-          echo "abi=$abi" >> "$GITHUB_OUTPUT"
+          echo "prerelease=$isPrerelease" >> "$GITHUB_OUTPUT"
           echo "package-name=$packageName" >> "$GITHUB_OUTPUT"
           echo "currentVersion: $currentVersion"
           echo "isPublished: $isPublished"
           echo "isPrerelease: $isPrerelease"
           echo "packageName: $packageName"
-          echo "abi: $abi"
-
-      - name: Create Git Tag
-        if: ${{ steps.check.outputs.published == 'false' }}
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git tag node-v${{ steps.check.outputs.current-version }}
-          git push origin node-v${{ steps.check.outputs.current-version }}
-
-      - name: Create release
-        if: ${{ steps.check.outputs.published == 'false' }}
-        id: create_release
-        uses: ncipollo/release-action@b7eabc95ff50cbeeedec83973935c8f306dfcd0b # v1.20.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag: node-v${{ steps.check.outputs.current-version }}
-          name: node-v${{ steps.check.outputs.current-version }}
-          allowUpdates: true
-          draft: true
-          prerelease: ${{ steps.check.outputs.is-prerelease == 'true' }}
 
     outputs:
       published: ${{ steps.check.outputs.published }}
       current-version: ${{ steps.check.outputs.current-version }}
-      is-prerelease: ${{ steps.check.outputs.is-prerelease }}
-      abi: ${{ steps.check.outputs.abi }}
+      prerelease: ${{ steps.check.outputs.prerelease }}
       package-name: ${{ steps.check.outputs.package-name }}
 
   publish_binaries:
@@ -267,6 +242,8 @@ jobs:
         with:
           tag_name: node-v${{ needs.release-check.outputs.current-version }}
           files: platform/node/*.tar.gz
+          draft: true
+          prerelease: ${{ needs.release-check.outputs.prerelease == 'true' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
