--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -291,8 +291,24 @@ jobs:
       - name: Extract changelog for version
         working-directory: platform/node
         run: |
+          # Extract changelog and ensure file exists
           awk '/^##/ { p = 0 }; p == 1 { print }; $0 == "## ${{ needs.release-check.outputs.current-version }}" { p = 1 };' CHANGELOG.md > changelog_for_version.md
+          
+          # Check if changelog was extracted successfully
+          if [[ ! -s changelog_for_version.md ]]; then
+            echo "No changelog found for version ${{ needs.release-check.outputs.current-version }}"
+            echo "## Changes" > changelog_for_version.md
+            echo "Release notes will be added later." >> changelog_for_version.md
+          fi
+          
+          echo "Changelog content:"
           cat changelog_for_version.md
+
+      - name: Debug release status before update
+        run: |
+          gh release view "node-v${{ needs.release-check.outputs.current-version }}" --json isDraft,tagName,name
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Update Release Notes
         id: update_release_notes
@@ -306,6 +322,12 @@ jobs:
           allowUpdates: true
           draft: false
           prerelease: ${{ steps.prepare_release.outputs.prerelease }}
+
+      - name: Debug release status after update
+        run: |
+          gh release view "node-v${{ needs.release-check.outputs.current-version }}" --json isDraft,tagName,name
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish to NPM (release)
         if: ${{ steps.prepare_release.outputs.prerelease == 'false' }}
