--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -258,7 +258,7 @@ jobs:
 
   publish_npm:
     runs-on: ubuntu-latest
-    needs: publish_binaries
+    needs: [release-check, publish_binaries]
     permissions:
       contents: write
     defaults:
@@ -276,17 +276,6 @@ jobs:
       - name: npm ci
         working-directory: platform/node
         run: npm ci --ignore-scripts
-
-      - name: Prepare release
-        id: prepare_release
-        working-directory: platform/node
-        run: |
-          RELEASE_TYPE="$(node -e "console.log(require('semver').prerelease('${{ needs.release-check.outputs.current-version }}') ? 'prerelease' : 'regular')")"
-          if [[ $RELEASE_TYPE == 'regular' ]]; then
-            echo "prerelease=false" >> "$GITHUB_OUTPUT"
-          else
-            echo "prerelease=true" >> "$GITHUB_OUTPUT"
-          fi
 
       - name: Extract changelog for version
         working-directory: platform/node
@@ -321,7 +310,7 @@ jobs:
           bodyFile: platform/node/changelog_for_version.md
           allowUpdates: true
           draft: false
-          prerelease: ${{ steps.prepare_release.outputs.prerelease }}
+          prerelease: ${{ needs.release-check.outputs.prerelease }}
 
       - name: Debug release status after update
         run: |
@@ -330,7 +319,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish to NPM (release)
-        if: ${{ steps.prepare_release.outputs.prerelease == 'false' }}
+        if: ${{ needs.release-check.outputs.prerelease == 'false' }}
         working-directory: platform/node
         run: |
           npm config set //registry.npmjs.org/:_authToken "${NPM_TOKEN}"
@@ -339,7 +328,7 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_ORG_TOKEN }}
 
       - name: Publish to NPM (prerelease)
-        if: ${{ steps.prepare_release.outputs.prerelease == 'true' }}
+        if: ${{ needs.release-check.outputs.prerelease == 'true' }}
         working-directory: platform/node
         run: |
           npm config set //registry.npmjs.org/:_authToken "${NPM_TOKEN}"
