--- a/platform/node/CMakeLists.txt
+++ b/platform/node/CMakeLists.txt
@@ -1,5 +1,9 @@
+# Updated CMakeLists.txt for Node-API migration
 set(NODE_MODULE_MINIMUM_ABI 83) # Minimum supported Node.js version: 14
 set(NODE_MODULE_CACHE_DIR ${CMAKE_BINARY_DIR}/headers)
+
+# Set Node-API version (8 is a good target - stable since Node.js 10.x)
+set(NODE_API_VERSION 8)
 
 if(DEFINED ENV{MSYSTEM})
     message(FATAL "MSYS2 is not supported, Node.js in Windows only has binary compatibility with Microsoft Visual C++.")
@@ -9,14 +13,8 @@ include(${CMAKE_CURRENT_LIST_DIR}/cmake/module.cmake)
 
 add_node_module(
     mbgl-node
-    INSTALL_PATH ${PROJECT_SOURCE_DIR}/platform/node/lib/{node_abi}/mbgl.node
-    NAN_VERSION 2.22.2
-    EXCLUDE_NODE_ABIS
-        46
-        47
-        48
-        51
-        137
+    INSTALL_PATH ${PROJECT_SOURCE_DIR}/platform/node/lib/mbgl.node
+    NODE_API_VERSION ${NODE_API_VERSION}
 )
 
 if(WIN32)
@@ -67,6 +65,14 @@ target_sources(
         ${PROJECT_SOURCE_DIR}/platform/node/src/node_request.cpp
         ${PROJECT_SOURCE_DIR}/platform/node/src/node_request.hpp
         ${PROJECT_SOURCE_DIR}/platform/node/src/util/async_queue.hpp
+)
+
+# Add Node-API specific compile definitions
+target_compile_definitions(
+    mbgl-node
+    INTERFACE
+        NAPI_VERSION=${NODE_API_VERSION}
+        NAPI_CPP_EXCEPTIONS  # Enable C++ exceptions support in Node-API
 )
 
 target_link_libraries(
