--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -107,7 +107,9 @@ jobs:
             libuv1-dev \
             libjpeg-dev \
             libpng-dev \
-            libwebp-dev
+            libwebp-dev \
+            libicu-dev \
+            zlib1g-dev
           /usr/sbin/update-ccache-symlinks
 
       - name: Use Node.js from nvmrc
