Revert "try to ink node dependencies"
This reverts commit d3deb97084226a8aeb7a6c867b6291e0364d32b4.

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -137,9 +137,7 @@ jobs:
             libuv1-dev \
             libjpeg-dev \
             libpng-dev \
-            libwebp-dev \
-            libicu-dev \
-            zlib1g-dev
+            libwebp-dev
           /usr/sbin/update-ccache-symlinks
 
       - name: Use Node.js from nvmrc
