--- a/.github/workflows/node-create-bump-version-pr.yml
+++ b/.github/workflows/node-create-bump-version-pr.yml
@@ -14,6 +14,9 @@ on:
           - patch
           - minor
           - major
+permissions:
+  contents: write
+  pull-requests: write
 jobs:
   bump-version-pr:
     name: Bump version PR
