--- a/.github/workflows/node-create-bump-version-pr.yml
+++ b/.github/workflows/node-create-bump-version-pr.yml
@@ -20,7 +20,7 @@ jobs:
     uses: acalcutt/reusable-workflows/.github/workflows/test.yml@main
     with:
       version: ${{ github.event.inputs.release_type }}
-      preid: 'pre'
+      preid: ''
       package-folders: 'platform/node'
       changelog-path: 'platform/node/CHANGELOG.md'
-      nvmrc-path: 'platform/node/.nvmrc'
+      nvmrc-path: ''
